# grn-robustness-audit

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md
implementation/: Makefile  README.md  pyproject.toml
implementation/configs/: axis2_default.yaml  axis2_kidney_smoke.yaml  axis3_default.yaml  axis3_smoke.yaml  axis4_cells200.yaml  axis4_default.yaml  wp10_axis2_real.yaml  wp10_axis5.yaml  wp13_axis2_ng1200.yaml  wp13_axis2_ng300.yaml  wp13_axis2_ng900.yaml  wp14_triple_null.yaml  wp2_default_v2.yaml  wp2_mvcc_multi.yaml  wp2_smoke.yaml  wp3_axis2_real.yaml  wp3_axis5.yaml  wp3_rss_redesign.yaml  wp4_fragility_axis3.yaml  wp4_reliability_grid.yaml
implementation/docs/: preprocessing.md
implementation/fragility/: __init__.py  __main__.py  preprocessing.py
implementation/fragility/axes/: __init__.py
implementation/fragility/cli/: __init__.py  __main__.py
implementation/fragility/data/: __init__.py  loader.py  registry.py
implementation/fragility/metrics/: __init__.py  null_separation.py  rank_shift.py  rss.py  stability.py  topk.py
implementation/fragility/nulls/: __init__.py  base.py  degree_preserving.py  gene_shuffle.py  global_shuffle.py  rank_permutation.py  within_coarse.py
implementation/fragility/panels/: __init__.py  registry.py
implementation/fragility/scorers/: __init__.py  base.py  mutual_information.py  pearson.py  (+5 more)
implementation/scripts/: wp1_kidney_arboreto.py  wp1_kidney_full.py  wp6_full.py
implementation/tests/: conftest.py  test_metrics.py  test_nulls.py  test_panels.py  test_scorers.py  test_smoke.py  test_wp3_wp4_wp10.py
(+54 files in other folders)
